adds random button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <h1 class="logo">Relaxor</h1>
         <h2>Get piece of mind with a single tap</h2>
         <a id="button-yellow" href="#">Join Our Mailing List</a>
+        <br><br>
+        <a id="button-yellow" href="https://www.design-seeds.com/">Check Out Something Random</a>
 
       </div>
     </header>
